# kronos-trader

./: .env.example  .gitignore  Dockerfile.agent  Dockerfile.agent.gpu  Dockerfile.execution  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: plan.md
infra/: app.py  cdk.context.json
infra/stacks/: compute_stack.py  data_stack.py  network_stack.py
scripts/: setup-ec2.sh
services/agent/: pyproject.toml
services/agent/src/kt_agent/: execution_client.py  main.py  pipeline.py  scheduler.py
services/execution/: pyproject.toml
services/execution/migrations/: env.py
services/execution/migrations/versions/: ef1c9a3114b9_initial_schema.py
services/execution/src/kt_execution/: main.py
services/execution/src/kt_execution/api/: dependencies.py  routes.py
services/execution/src/kt_execution/dashboard/: routes.py
services/execution/src/kt_execution/db/: models.py  session.py
services/execution/src/kt_execution/risk/: kill_switch.py  manager.py
services/execution/src/kt_execution/services/: audit_logger.py  position_tracker.py  prediction_tracker.py  trade_executor.py
services/execution/src/kt_execution/templates/: dashboard.html
