[project]
name = "kt-agent"
version = "0.1.0"
description = "Trading agent: data fetch, Kronos prediction, signal generation, trade execution"
requires-python = ">=3.12"
dependencies = [
    "kt-shared",
    "kt-alpaca",
    "kt-kronos",
    "kt-signal",
    "httpx>=0.27",
    "apscheduler>=3.10,<4.0",
    "structlog>=24.0",
]
