[project]
name = "kt-execution"
version = "0.1.0"
description = "Execution service: risk management, trade execution, and dashboard"
requires-python = ">=3.12"
dependencies = [
    "kt-shared",
    "kt-alpaca",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "jinja2>=3.1",
    "structlog>=24.0",
]
